# scuzzie

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
scripts/: _common  bootstrap  format  lint  test
scuzzie/: __init__.py  cli.py  comic.py  exc.py  generator.py  gui.py  models.py  resources.py  schemas.py  templator.py
