[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scuzzie"
version = "0.1.0"
description = ""
authors = ["backwardspy <backwardspy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
scuzzie = "scuzzie.cli:scuzzie"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
toml = "^0.10.2"
Mako = "^1.2.0"
python-slugify = "^6.1.2"
marshmallow = "^3.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
ptpython = "^3.0.20"
