[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scuzzie"
version = "0.0.0"
description = "a simple webcomic static site generator"
authors = ["backwardspy <backwardspy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/backwardspy/scuzzie"

[tool.poetry.scripts]
scuzzie = "scuzzie.cli:scuzzie"
scuzzie-gui = "scuzzie.gui:scuzzie"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Mako = "^1.2.0"
python-slugify = "^6.1.2"
PySimpleGUI = {version = "^4.60.1", optional = true}
pydantic = "^1.9.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.extras]
gui = ["PySimpleGUI"]

[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
black = "^22.3.0"
ptpython = "^3.0.20"
ward = "^0.66.0b0"
pylint = "^2.14.1"
isort = "^5.10.1"
types-python-slugify = "^5.0.4"
types-contextvars = "^2.4.6"

[tool.poetry-dynamic-versioning]
enable = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
good-names = [
    "v",    # pydantic validator argument
    "ex",   # exception
]

[tool.ward]
order = "random"